Adapted Bioinformatic Services site to recommendation from internal feedback meeting
REMOVE Variant Calling section
REMOVE Expression-analysis section
ADD Genomics section
ADD Transcriptomics section
ADD Proteomics section
ADD immuninformatics section
REMADE bioinformatic services grouping
REMADE Card layout for all sections
ADD Description and Github Link for all sections
ADD Github Links to bioinformatic services section

--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -1,59 +1,101 @@
 <section id="bioinformatic-services">
     <div class="bs4-container">
-        <div class="bs4-row">
-            <div class="bs4-col">
+        <div class="bs4-row bs4-justify-content-center">
+            <div class="bs4-col-10 bs4-offset-1">
                 <div class="section-title">
                     <div class="bs4-h1 bs4-text-center">Bioinformatics Services</div>
 
-                    <div class="bs4-h3 bs4-text-center bs4-mt-5">We employ only high-quality curated <a
-                            href="https://nf-co.re/"><img alt="nf-core" class="img-in-text"
-                                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/57614/nf-core-logo/f36e4173-cae9-4a98-bb55-40cabba32c87?t=1585750169857" /></a>
-                        pipelines</div>
+                    <p class="bs4-h3 bs4-text-center bs4-mt-5">We employ only high-quality curated <a
+                            href="https://nf-co.re/" target="_blank"><img alt="nf-core" class="img-in-text"
+                                src="https://portal.qbic.uni-tuebingen.de/portal/documents/33387/38751/nf-core-logo.png/215c974a-39dd-4bbb-bd11-439c97797090?t=1585832017000" /></a>
+                        pipelines</p>
                 </div>
 
-                <div class="bs4-card-deck">
-                    <div class="bs4-card bs4-border-0">
-                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Variant Detection</div>
+                <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
+                    <div class="bs4-row bs4-mb-4 bs4-justify-content-center bs4-w-100">
+                        <div class="bs4-card bs4-border-0 b min-vw-auto bs4-w-100">
+                            <div class="bs4-card-header bg-ncct bs4-text-white bs4-h4">Genomics</div>
 
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Whole Genome sequencing</li>
-                            <li class="bs4-list-group-item">Long-Read sequencing</li>
-                            <li class="bs4-list-group-item">Panel sequencing</li>
-                            <li class="bs4-list-group-item">Exome sequencing</li>
-                            <li class="bs4-list-group-item">Targeted RNA sequencing</li>
-                        </ul>
+                            <ul class="bs4-list-group">
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/sarek"
+                                        target="_blank">Sarek</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/nanoseq"
+                                        target="_blank">Nanoseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/bacass"
+                                        target="_blank">Bacass</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/eager"
+                                        target="_blank">Eager</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                            <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">Transcriptomics</div>
+
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/rnaseq"
+                                        target="_blank">Rnaseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/scrnaseq"
+                                        target="_blank">ScRNAseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/rnafusion"
+                                        target="_blank">Rnafusion</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/smrnaseq"
+                                        target="_blank">Smrnaseq</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                            <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Metagenomics
+                            </div>
+
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/ampliseq"
+                                        target="_blank">Ampliseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/mag" target="_blank">Mag</a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
 
-                    <div class="bs4-card bs4-border-0">
-                        <div class="bs4-card-header bg-ncct bs4-center bs4-text-white bs4-h4">Expression Analysis</div>
+                    <div class="bs4-row bs4-justify-content-center bs4-w-100  ">
+                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                            <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Epigenomics</div>
 
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">mRNA sequencing</li>
-                            <li class="bs4-list-group-item">Total RNA sequencing</li>
-                            <li class="bs4-list-group-item">3'-Sequencing</li>
-                            <li class="bs4-list-group-item">scRNA sequencing</li>
-                            <li class="bs4-list-group-item">miRNA sequencing</li>
-                            <li class="bs4-list-group-item">smallRNA sequencing</li>
-                            <li class="bs4-list-group-item">long-Read RNA sequencing</li>
-                        </ul>
-                    </div>
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/methylseq"
+                                        target="_blank">Methylseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/chipseq"
+                                        target="_blank">Chipseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/atacseq"
+                                        target="_blank">Atacseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/hic" target="_blank">Hic</a>
+                                </li>
+                            </ul>
+                        </div>
 
-                    <div class="bs4-card bs4-border-0">
-                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Metagenomics</div>
+                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                            <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Proteomics</div>
 
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Shotgun Metagenomics</li>
-                            <li class="bs4-list-group-item">16S/Amplicon Sequencing</li>
-                            <li class="bs4-list-group-item">Metatranscriptomics</li>
-                        </ul>
-                    </div>
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/mhcquant"
+                                        target="_blank">Mhcquant</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/proteomicslfq"
+                                        target="_blank">Proteomicslfq</a></li>
+                            </ul>
+                        </div>
 
-                    <div class="bs4-card bs4-border-0">
-                        <div class="bs4-card-header bg-ncct bs4-text-left bs4-text-white bs4-h4">Epigenomics</div>
+                        <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
+                            <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Immunoinformatics
+                            </div>
 
-                        <ul class="bs4-list-group bs4-text-left">
-                            <li class="bs4-list-group-item">Whole genome bisulfite sequencing</li>
-                        </ul>
+                            <ul class="bs4-list-group bs4-text-center">
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/hlatyping"
+                                        target="_blank">Hlatyping</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/epitopeprediction"
+                                        target="_blank">Epitopeprediction</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/bcellmagic"
+                                        target="_blank">Bcellmagic</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
