--- a/site/bioinformatics-services/transcriptomics.html
+++ b/site/bioinformatics-services/transcriptomics.html
@@ -1,36 +1,36 @@
-<section id="bs-epigenomics">
+<section id="bs-transcriptomics">
     <div class="bs4-container">
         <div class="bs4-row bs4-justify-content-center">
             <div class="bs4-col-10 bs4-offset-1">
                 <div class="section-title">
-                    <div class="bs4-h1 bs4-text-center">Epigenomics</div>
+                    <div class="bs4-h1 bs4-text-center">Transcriptomics</div>
                 </div>
 
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-row bs4-mb-2 bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Methylseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Rnaseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
-                                <div class="bs4-card-text">Methylation (Bisulfite-Sequencing) analysis pipeline</div>
+                                <div class="bs4-card-text">RNA sequencing analysis pipeline with gene counts and quality
+                                    control</div>
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/methylseq" role="button" target="_blank">More
+                                    href="https://github.com/nf-core/rnaseq" role="button" target="_blank">More
                                     Information</a>
                             </div>
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Chipseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Scrnaseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
-                                <div class="bs4-card-text">ChIP-seq peak-calling, QC and differential analysis pipeline.
-                                </div>
+                                <div class="bs4-card-text">A single-cell RNAseq pipeline for 10X genomics data</div>
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/chipseq" role="button" target="_blank">More
+                                    href="https://github.com/nf-core/scrnaseq" role="button" target="_blank">More
                                     Information</a>
                             </div>
                         </div>
@@ -38,28 +38,27 @@
 
                     <div class="bs4-row bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Atacseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Rnafusion</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
-                                <div class="bs4-card-text">ATAC-seq peak-calling, QC and differential analysis pipeline
-                                </div>
+                                <div class="bs4-card-text">RNA-seq analysis pipeline for detection gene-fusions</div>
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/atacseq" role="button" target="_blank">More
+                                    href="https://github.com/nf-core/rnafusion" role="button" target="_blank">More
                                     Information</a>
                             </div>
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Hic</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Smrnaseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
-                                <div class="bs4-card-text">Analysis of Chromosome Conformation Capture data (Hi-C)</div>
+                                <div class="bs4-card-text">A small-RNA sequencing analysis pipeline</div>
 
                                 <div>&nbsp;</div>
                                 <a class="btn btn-primary btn-ncct bg-ncct bs4-font-weight-bold bg-text-center bs4-mt-auto"
-                                    href="https://github.com/nf-core/hic" role="button" target="_blank">More
+                                    href="https://github.com/nf-core/smrnaseq" role="button" target="_blank">More
                                     Information</a>
                             </div>
                         </div>
