Removed Ont from Nanopore instruments according to Feedback from Angel

--- a/site/sequencing-solutions/instruments.html
+++ b/site/sequencing-solutions/instruments.html
@@ -14,8 +14,8 @@
                         <li class="bs4-list-group-item">MiSeq</li>
                         <li class="bs4-list-group-item">NovaSeq6000</li>
                         <li class="bs4-list-group-item">DNBSEQ-G400</li>
-                        <li class="bs4-list-group-item">ONT Nanopore MinION</li>
-                        <li class="bs4-list-group-item">ONT Nanopore PromethION</li>
+                        <li class="bs4-list-group-item">Nanopore MinION</li>
+                        <li class="bs4-list-group-item">Nanopore PromethION</li>
                         <li class="bs4-list-group-item">PacBio Sequel II</li>
                     </ul>
                 </div>
