Changed pipeline names capitalization to lower case for all sections

--- a/site/bioinformatics-services/bioinformatics-services.html
+++ b/site/bioinformatics-services/bioinformatics-services.html
@@ -18,13 +18,13 @@
 
                             <ul class="bs4-list-group">
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/sarek"
-                                        target="_blank">Sarek</a></li>
+                                        target="_blank">sarek</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/nanoseq"
-                                        target="_blank">Nanoseq</a></li>
+                                        target="_blank">nanoseq</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/bacass"
-                                        target="_blank">Bacass</a></li>
+                                        target="_blank">bacass</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/eager"
-                                        target="_blank">Eager</a></li>
+                                        target="_blank">eager</a></li>
                             </ul>
                         </div>
 
@@ -33,13 +33,13 @@
 
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/rnaseq"
-                                        target="_blank">Rnaseq</a></li>
+                                        target="_blank">rnaseq</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/scrnaseq"
-                                        target="_blank">ScRNAseq</a></li>
+                                        target="_blank">scRNAseq</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/rnafusion"
-                                        target="_blank">Rnafusion</a></li>
+                                        target="_blank">rnafusion</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/smrnaseq"
-                                        target="_blank">Smrnaseq</a></li>
+                                        target="_blank">smrnaseq</a></li>
                             </ul>
                         </div>
 
@@ -49,8 +49,8 @@
 
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/ampliseq"
-                                        target="_blank">Ampliseq</a></li>
-                                <li class="bs4-list-group-item"><a href="https://nf-co.re/mag" target="_blank">Mag</a>
+                                        target="_blank">ampliseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/mag" target="_blank">mag</a>
                                 </li>
                             </ul>
                         </div>
@@ -62,12 +62,12 @@
 
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/methylseq"
-                                        target="_blank">Methylseq</a></li>
+                                        target="_blank">methylseq</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/chipseq"
-                                        target="_blank">Chipseq</a></li>
+                                        target="_blank">chipseq</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/atacseq"
-                                        target="_blank">Atacseq</a></li>
-                                <li class="bs4-list-group-item"><a href="https://nf-co.re/hic" target="_blank">Hic</a>
+                                        target="_blank">atacseq</a></li>
+                                <li class="bs4-list-group-item"><a href="https://nf-co.re/hic" target="_blank">hic</a>
                                 </li>
                             </ul>
                         </div>
@@ -77,23 +77,23 @@
 
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/mhcquant"
-                                        target="_blank">Mhcquant</a></li>
+                                        target="_blank">mhcquant</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/proteomicslfq"
-                                        target="_blank">Proteomicslfq</a></li>
+                                        target="_blank">proteomicslfq</a></li>
                             </ul>
                         </div>
 
                         <div class="bs4-card bs4-border-0 min-vw-auto bs4-w-100">
-                            <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">Immunoinformatics
+                            <div class="bs4-card-header bg-ncct bs4-text-center bs4-text-white bs4-h4">immunoinformatics
                             </div>
 
                             <ul class="bs4-list-group bs4-text-center">
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/hlatyping"
-                                        target="_blank">Hlatyping</a></li>
+                                        target="_blank">hlatyping</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/epitopeprediction"
-                                        target="_blank">Epitopeprediction</a></li>
+                                        target="_blank">epitopeprediction</a></li>
                                 <li class="bs4-list-group-item"><a href="https://nf-co.re/bcellmagic"
-                                        target="_blank">Bcellmagic</a></li>
+                                        target="_blank">bcellmagic</a></li>
                             </ul>
                         </div>
                     </div>
