--- a/site/bioinformatics-services/genomics.html
+++ b/site/bioinformatics-services/genomics.html
@@ -9,7 +9,7 @@
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-row bs4-mb-2 bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-text-white bg-ncct bs4-text-center bs4-h4">Sarek</div>
+                            <div class="bs4-card-header bs4-text-white bg-ncct bs4-text-center bs4-h4">sarek</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">Analysis pipeline to detect germline or somatic variants from
@@ -23,7 +23,7 @@
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Nanoseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">nanoseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">Nanopore demultiplexing, QC and alignment pipeline</div>
@@ -38,7 +38,7 @@
 
                     <div class="bs4-row bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Bacass</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">bacass</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">Simple bacterial assembly and annotation pipeline</div>
@@ -51,7 +51,7 @@
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Eager</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">eager</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">A fully reproducible and state of the art ancient DNA
