--- a/site/bioinformatics-services/immunoinformatics.html
+++ b/site/bioinformatics-services/immunoinformatics.html
@@ -8,7 +8,7 @@
 
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Hlatyping</div>
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">hlatyping</div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                             <div class="bs4-card-text">Precision HLA typing from next-generation sequencing data</div>
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Epitopeprediction
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">epitopeprediction
                         </div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Bcellmagic</div>
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">bcellmagic</div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                             <div class="bs4-card-text">B cell repertoire sequencing analysis pipeline using the
