--- a/site/bioinformatics-services/metagenomics.html
+++ b/site/bioinformatics-services/metagenomics.html
@@ -8,7 +8,7 @@
 
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Ampliseq</div>
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">ampliseq</div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                             <div class="bs4-card-text">16S rRNA amplicon sequencing analysis workflow</div>
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Mag</div>
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">mag</div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                             <div class="bs4-card-text">Assembly and binning of metagenomes</div>
