--- a/site/bioinformatics-services/proteomics.html
+++ b/site/bioinformatics-services/proteomics.html
@@ -8,7 +8,7 @@
 
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Mhcquant</div>
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">mhcquant</div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                             <div class="bs4-card-text">Identify and quantify peptides from mass spectrometry raw data
@@ -22,7 +22,7 @@
                     </div>
 
                     <div class="bs4-card min-vw-auto">
-                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Proteomicslfq</div>
+                        <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">proteomicslfq</div>
 
                         <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                             <div class="bs4-card-text">Proteomics label-free quantification (LFQ) analysis pipeline
