--- a/site/bioinformatics-services/transcriptomics.html
+++ b/site/bioinformatics-services/transcriptomics.html
@@ -9,7 +9,7 @@
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-row bs4-mb-2 bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Rnaseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">rnaseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">RNA sequencing analysis pipeline with gene counts and quality
@@ -23,7 +23,7 @@
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Scrnaseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">scrnaseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">A single-cell RNAseq pipeline for 10X genomics data</div>
@@ -38,7 +38,7 @@
 
                     <div class="bs4-row bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Rnafusion</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">rnafusion</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">RNA-seq analysis pipeline for detection gene-fusions</div>
@@ -51,7 +51,7 @@
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Smrnaseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">smrnaseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">A small-RNA sequencing analysis pipeline</div>
