--- a/site/bioinformatics-services/epigenomics.html
+++ b/site/bioinformatics-services/epigenomics.html
@@ -9,7 +9,7 @@
                 <div class="bs4-card-deck bs4-justify-content-center bs4-text-center">
                     <div class="bs4-row bs4-mb-2 bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Methylseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">methylseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">Methylation (Bisulfite-Sequencing) analysis pipeline</div>
@@ -22,7 +22,7 @@
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Chipseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">chipseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">ChIP-seq peak-calling, QC and differential analysis pipeline.
@@ -38,7 +38,7 @@
 
                     <div class="bs4-row bs4-justify-content-center bs4-w-100">
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Atacseq</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">atacseq</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">ATAC-seq peak-calling, QC and differential analysis pipeline
@@ -52,7 +52,7 @@
                         </div>
 
                         <div class="bs4-card min-vw-auto">
-                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">Hic</div>
+                            <div class="bs4-card-header bs4-h4 bs4-text-white bg-ncct bs4-text-center">hic</div>
 
                             <div class="bs4-card-body bs4-d-flex bs4-flex-column">
                                 <div class="bs4-card-text">Analysis of Chromosome Conformation Capture data (Hi-C)</div>
